--- a/storefront/package.json
+++ b/storefront/package.json
@@ -38,6 +38,8 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "start-server-and-test": "^2.0.8",
     "typescript": "~5.6.3",
     "vite": "^6.0.1",
