--- a/storefront/package.json
+++ b/storefront/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bulma": "^1.0.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
