--- a/storefront/package.json
+++ b/storefront/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bulma": "^1.0.2",
     "pinia": "^2.2.6",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
     "vue-router": "^4.4.5"
