--- a/storefront/package.json
+++ b/storefront/package.json
@@ -19,6 +19,7 @@
     "@unhead/vue": "^1.11.18",
     "@vueuse/core": "^12.5.0",
     "bulma": "^1.0.2",
+    "photoswipe": "^5.4.4",
     "pinia": "^2.2.6",
     "swiper": "^11.2.2",
     "vite-svg-loader": "^5.1.0",
