--- a/storefront/package.json
+++ b/storefront/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ark-ui/vue": "^4.9.2",
     "@unhead/vue": "^1.11.18",
     "@vueuse/core": "^12.5.0",
     "bulma": "^1.0.2",
