--- a/storefront/.prettierrc.json
+++ b/storefront/.prettierrc.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": true,
-  "singleQuote": false,
-  "printWidth": 100
+  "semi": false,
+  "singleQuote": true,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "singleAttributePerLine": true
 }
