--- a/medusa/package.json
+++ b/medusa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-medusa-store",
+  "name": "medusa",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
   "author": "Medusa (https://medusajs.com)",
@@ -26,29 +26,29 @@
     "@medusajs/cli": "2.6.1",
     "@medusajs/framework": "2.6.1",
     "@medusajs/medusa": "2.6.1",
-    "@mikro-orm/core": "6.4.11",
-    "@mikro-orm/knex": "6.4.11",
-    "@mikro-orm/migrations": "6.4.11",
-    "@mikro-orm/postgresql": "6.4.11",
-    "awilix": "^12.0.5",
-    "pg": "^8.14.1"
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/knex": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/postgresql": "6.4.3",
+    "awilix": "^8.0.1",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.6.1",
-    "@mikro-orm/cli": "6.4.11",
-    "@swc/core": "1.11.16",
-    "@swc/jest": "^0.2.37",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
+    "@mikro-orm/cli": "6.4.3",
+    "@swc/core": "1.5.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.2.25",
     "jest": "^29.7.0",
     "prop-types": "^15.8.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "vite": "^6.2.5",
+    "typescript": "^5.6.2",
+    "vite": "^5.2.11",
     "yalc": "^1.0.0-pre.53"
   },
   "engines": {
