--- a/storefront/package.json
+++ b/storefront/package.json
@@ -20,12 +20,14 @@
     "@medusajs/js-sdk": "^2.7.1",
     "@medusajs/types": "^2.7.1",
     "@unhead/vue": "^2.0.8",
+    "@vee-validate/rules": "^4.15.1",
     "@vueuse/core": "^13.1.0",
     "bulma": "^1.0.4",
     "lodash.debounce": "^4.0.8",
     "photoswipe": "^5.4.4",
     "pinia": "^3.0.2",
     "swiper": "^11.2.6",
+    "vee-validate": "^4.15.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.3",
