add prettier-plugin-sort-imports for import sorting

--- a/storefront/.prettierrc.json
+++ b/storefront/.prettierrc.json
@@ -4,5 +4,9 @@
   "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "plugins": ["prettier-plugin-sort-imports"],
+  "importOrder": ["^vue$", "^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
