--- a/storefront/package.json
+++ b/storefront/package.json
@@ -20,14 +20,12 @@
     "@medusajs/js-sdk": "^2.7.1",
     "@medusajs/types": "^2.7.1",
     "@unhead/vue": "^2.0.8",
-    "@vee-validate/rules": "^4.15.1",
     "@vueuse/core": "^13.1.0",
     "bulma": "^1.0.4",
     "lodash.debounce": "^4.0.8",
     "photoswipe": "^5.4.4",
     "pinia": "^3.0.2",
     "swiper": "^11.2.6",
-    "vee-validate": "^4.15.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.3",
@@ -51,6 +49,7 @@
     "jsdom": "^26.1.0",
     "npm-run-all2": "^8.0.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-sort-imports": "^1.8.8",
     "sass": "^1.87.0",
     "start-server-and-test": "^2.0.11",
     "typescript": "~5.8.3",
