vs code: add typo check plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,40 @@
 {
+  "cSpell.enabled": true,
+  "cSpell.language": "en,ru,de",
+  "cSpell.words": [
+    "vue",
+    "typescript",
+    "bulma",
+    "is-danger",
+    "is-primary",
+    "has-text",
+    "is-active",
+    "is-hidden",
+  ],
+  "cSpell.ignorePaths": ["node_modules/**", "dist/**", "build/**", "*.min.js", "*.min.css"],
+  "cSpell.languageSettings": [
+    {
+      "languageId": "vue,html,css,scss,typescript,javascript,json",
+      "patterns": [
+        {
+          "name": "CSS Classes in Attributes",
+          "pattern": "/\\b(class|className)=['\"][^'\"]*['\"]/g"
+        },
+        {
+          "name": "CSS Selectors",
+          "pattern": "/\\.[a-zA-Z0-9\\-]+/g"
+        },
+        {
+          "name": "Function and Variable Names",
+          "pattern": "/\\b[a-zA-Z0-9]+\\b/g"
+        },
+        {
+          "name": "Vue Component Tags",
+          "pattern": "/<[A-Z][a-zA-Z0-9]+(?:-[A-Z][a-zA-Z0-9]+)*>/g"
+        }
+      ]
+    }
+  ],
+  "cSpell.checkFileNames": true, 
   "oxc.enable": true
 }
