--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,15 @@
   "cSpell.enabled": true,
   "cSpell.language": "en,ru,de",
   "cSpell.words": [
-    "vue",
-    "typescript",
     "bulma",
-    "is-danger",
-    "is-primary",
+    "fullhd",
     "has-text",
     "is-active",
+    "is-danger",
     "is-hidden",
+    "is-primary",
+    "typescript",
+    "vue"
   ],
   "cSpell.ignorePaths": ["node_modules/**", "dist/**", "build/**", "*.min.js", "*.min.css"],
   "cSpell.languageSettings": [
