--- a/medusa/.env.template
+++ b/medusa/.env.template
@@ -6,3 +6,5 @@ JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
 DATABASE_URL=
 DB_NAME=medusa-v2
+STRAPI_URL=http://localhost:1337/api
+STRAPI_API_KEY=your-api-token-here
