--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,13 @@
     "typescript",
     "vue"
   ],
-  "cSpell.ignorePaths": ["node_modules/**", "dist/**", "build/**", "*.min.js", "*.min.css"],
+  "cSpell.ignorePaths": [
+    "node_modules/**",
+    "dist/**",
+    "build/**",
+    "*.min.js",
+    "*.min.css"
+  ],
   "cSpell.languageSettings": [
     {
       "languageId": "vue,html,css,scss,typescript,javascript,json",
@@ -36,6 +42,7 @@
       ]
     }
   ],
-  "cSpell.checkFileNames": true, 
-  "oxc.enable": true
+  "cSpell.checkFileNames": true,
+  "oxc.enable": true,
+  "git.ignoreLimitWarning": true
 }
