add i18n support to payload

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   postgres:
     image: postgres:16
-    container_name: my-postgres
+    container_name: shop
     environment:
       POSTGRES_PASSWORD: mysecretpassword
-      POSTGRES_DB: mydb
+      POSTGRES_DB: shop-db
     ports:
       - "5432:5432"
     volumes:
